--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,11 +10,11 @@
     </div>
     <span class="menu-spacer"></span>
     <div>
-      <a mat-button [routerLink]="'/resume-templates'"> Resume Templates</a>
-      <a mat-button [routerLink]="'/cv-templates'"> CV Templates </a>
-      <a mat-button [routerLink]="'/cover-letters'"> Cover Letters </a>
-      <a mat-button [routerLink]="'/create-contact'"> Create Contact </a>
-      <a mat-button [routerLink]="'/activities'"> Activities </a>
+      <a mat-button [routerLink]="'/resume-templates'" routerLinkActive="active-link"> Resume Templates</a>
+      <a mat-button [routerLink]="'/cv-templates'" routerLinkActive="active-link"> CV Templates </a>
+      <a mat-button [routerLink]="'/cover-letters'" routerLinkActive="active-link"> Cover Letters </a>
+      <a mat-button [routerLink]="'/create-contact'" routerLinkActive="active-link"> Create Contact </a>
+      <a mat-button [routerLink]="'/activities'" routerLinkActive="active-link"> Activities </a>
       <a mat-button [routerLink]="'/create-activity'"> Create Activity </a>
     </div>
     <mat-icon class="example-icon" aria-hidden="false" aria-label="Example heart icon">account_box</mat-icon>
