--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -14,9 +14,7 @@
     <ion-grid>
       <ion-row>
         <ion-col class="start">
-          <mat-card-title [routerLink]="'/resume-templates'"
-            >Resumes</mat-card-title
-          >
+          <mat-card-title [routerLink]="'/resume-templates'">Resumes</mat-card-title>
           <mat-card-subtitle>Student/Intermediate</mat-card-subtitle>
         </ion-col>
         <ion-col class="start">
@@ -52,7 +50,7 @@
 <ion-grid>
   <ion-row>
     <ion-col size="5">
-      <mat-card class="resume-card" (click)="gotoResumeForm()">
+      <mat-card class="resume-card" (click)="gotoResumeForm('basic')">
         <mat-card-header>
           <ion-grid>
             <ion-row>
@@ -69,7 +67,7 @@
     </ion-col>
     <ion-col size="2"></ion-col>
     <ion-col size="5">
-      <mat-card class="resume-card" (click)="gotoResumeForm()">
+      <mat-card class="resume-card" (click)="gotoResumeForm('executive')">
         Simple card
         <mat-card-header> </mat-card-header>
         <mat-card-content> </mat-card-content>
@@ -81,7 +79,7 @@
 <ion-grid>
   <ion-row>
     <ion-col size="5">
-      <mat-card class="resume-card" (click)="gotoResumeForm()">
+      <mat-card class="resume-card" (click)="gotoResumeForm('basic')">
         Simple card
         <mat-card-header> </mat-card-header>
         <mat-card-content> </mat-card-content>
@@ -89,7 +87,7 @@
     </ion-col>
     <ion-col size="2"></ion-col>
     <ion-col size="5">
-      <mat-card class="resume-card" (click)="gotoResumeForm()">
+      <mat-card class="resume-card" (click)="gotoResumeForm('executive')">
         Simple card
         <mat-card-header> </mat-card-header>
         <mat-card-content> </mat-card-content>
