--- a/src/app/components/resume/resume.component.scss
+++ b/src/app/components/resume/resume.component.scss
@@ -7,7 +7,7 @@
 }
 .info-card {
   &:hover {
-    transition: all 0.2s ease;
+    transition: all 0.9s ease;
   }
 }
 
@@ -20,7 +20,10 @@
   background-color: #d9d9d9;
   color: black;
   &:hover {
-    transition: all 0.2s ease;
+    //transition: all 0.9s ease;
+    box-shadow: 0 8px 8px 8px rgba(0,0,0,.2), 0 8px 8px 0 rgba(0,0,0,.14), 0 8px 8px 0 rgba(0,0,0,.12) !important;
+    transform: translate3d(0,0,0);
+    transition: background .9s cubic-bezier(.25,.8,.25,1),box-shadow 280ms cubic-bezier(.4,0,.2,1);
   }
 }
 
@@ -53,7 +56,7 @@ mat-card-subtitle {
 mat-card-title,
 mat-card-subtitle {
   &:hover {
-    transition: all 0.2s ease;
+    transition: all 0.9s ease;
     color: #b3b3b3;
   }
 }
