--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,3 +30,12 @@ body {
 .menu-spacer {
   flex: 1 1 auto;
 }
+
+.active-link {
+  color: #0d0d0d;
+  //font-weight: bold;
+  &:hover {
+    transition: all 0.9s ease;
+  }
+  
+} 
