--- a/src/app/components/resumes/basic-resume/basic-resume.component.scss
+++ b/src/app/components/resumes/basic-resume/basic-resume.component.scss
@@ -1,8 +1,12 @@
+.template-background{
+  background-color: #595959;
+}
+
 .resume-card {
   margin-top: 50px;
   margin-left: 100px;
   margin-right: 100px;
-  margin-bottom: 10px;
+  margin-bottom: 70px;
   border-radius: 5px;
   background-color: white;
   color: black;
@@ -29,5 +33,10 @@
 
 .form-label {
   color: black;
+}
+
+.example-button-row {
+  display: table-cell;
+  width: 490px;
 }
 
