--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Oxygen&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100&family=Roboto:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Overpass:wght@100&family=Raleway:wght@100&family=Roboto:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hind:wght@300&family=Overpass:wght@100&family=Raleway:wght@100&family=Roboto:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hind:wght@300&family=Overpass:wght@100&family=Oxygen:wght@300&family=Raleway:wght@100&family=Roboto:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hind:wght@300&family=Overpass:wght@100&family=Oxygen:wght@300&family=Raleway:wght@100&family=Roboto:wght@100&family=Ubuntu:wght@300&display=swap');
 
 * {
   margin: 0;
@@ -10,6 +17,7 @@
 
 body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  // font-family: "Helvetica Neue", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.625;
@@ -39,3 +47,6 @@ body {
   }
   
 } 
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
