--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" class="navigation-bar">
   <mat-toolbar-row>
     <button mat-icon-button>
       <mat-icon>menu</mat-icon>
@@ -20,6 +20,7 @@
     <mat-icon class="example-icon" aria-hidden="false" aria-label="Example heart icon">account_box</mat-icon>
   </mat-toolbar-row>
 </mat-toolbar>
+
 <div class="page-container">
   <router-outlet></router-outlet>
 </div>
