--- a/src/app/components/previews/basic-preview/basic-preview.component.scss
+++ b/src/app/components/previews/basic-preview/basic-preview.component.scss
@@ -61,6 +61,10 @@
   font-size: medium;  
 }
 
+.ptag {
+  white-space: pre-wrap;
+}
+
 .ptag1Ubuntu {
   font-size: large;
   font-family: "Ubuntu";
