--- a/src/app/components/resumes/basic-resume/basic-resume.component.scss
+++ b/src/app/components/resumes/basic-resume/basic-resume.component.scss
@@ -1,5 +1,6 @@
-.template-background{
+.template-background {
   background-color: #595959;
+  font-family: "Raleway";
 }
 
 .resume-card {
@@ -33,6 +34,18 @@
 
 .form-label {
   color: black;
+  font-family: "Raleway";
+  font-weight: bold;
+  font-size: large;
+}
+
+.inputs {
+  font-family: "Raleway";
+  font-weight: bold;
+}
+
+.text-area {
+  white-space: pre-wrap;
 }
 
 .example-button-row {
@@ -40,3 +53,36 @@
   width: 490px;
 }
 
+.input-space-work input[type=text]{
+  width:100%;
+  height:40px;
+  outline:0;
+  padding:10px;
+  border: none;
+  border-bottom:1px solid #ccc;
+}
+
+.input-space-edu input[type=text]{
+  width:100%;
+  height:40px;
+  outline:0;
+  padding:10px;
+  border: none;
+  border-bottom:1px solid #ccc;
+}
+
+.line-style {
+  border: 2px dashed red;
+}
+
+.add-delete {
+  align-items: center;
+  width: 60px;
+  height: 110px;
+}
+
+fa-icon {
+  &:hover {
+    cursor: pointer;
+  }
+}
