--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Hind:wght@300&family=Overpass:wght@100&family=Oxygen:wght@300&family=Raleway:wght@100&family=Roboto:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Hind:wght@300&family=Overpass:wght@100&family=Oxygen:wght@300&family=Raleway:wght@100&family=Roboto:wght@100&family=Ubuntu:wght@300&display=swap');
 
+@import url('https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css');
+
 * {
   margin: 0;
   padding: 0;
